# kodo-template

./: .env.example  .gitignore  .node_id  Dockerfile  README.md  pyproject.toml  report.md
input/: clicks.csv  email.eml  email.html  links.csv
src/agentic/: agentic_config.py
src/kodo_template/: crew.py  main.py
src/kodo_template/config/: agents.yaml  tasks.yaml
src/kodo_template/tools/: custom_tool.py
src/templatecrew/: crew.py  main.py
