[tool.poetry]
name = "templatecrew"
version = "0.1.0"
description = "templatecrew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }
agenticos = "*"


[tool.poetry.scripts]
templatecrew = "templatecrew.main:run"
run_crew = "templatecrew.main:run"
train = "templatecrew.main:train"
replay = "templatecrew.main:replay"
test = "templatecrew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
